--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongoose": "^8.16.5",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "path": "^0.12.7"
   }
 }
