--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
@@ -20,6 +21,7 @@
     "mongoose": "^8.16.5",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^5.8.0"
   }
 }
